--- a/ExamenLabProgra2/nbproject/project.properties
+++ b/ExamenLabProgra2/nbproject/project.properties
@@ -54,7 +54,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=examenlabprogra2.ExamenLabProgra2
+main.class=examenlabprogra2.Admin
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
